# PedalBoard

./: .gitignore  CMakeLists.txt  run.ps1
include/: AmpSimProcessor.h  CabSimProcessor.h  ChorusProcessor.h  DelayProcessor.h  FuzzProcessor.h  GuitarRigEngine.h  MainComponent.h  PedalComponent.h  StyleSheet.h
source/: AmpSimProcessor.cpp  CabSimProcessor.cpp  ChorusProcessor.cpp  DelayProcessor.cpp  FuzzProcessor.cpp  GuitarRigEngine.cpp  Main.cpp  MainComponent.cpp
